Fixed issue with long quotes overflowing UI

--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600;700;800&family=Outfit:wght@500&display=swap');
+
 #root, html, body{
     margin: 0;
     padding: 0;
-    height: 80vh;
+    height: max-content;
     box-sizing: border-box;
-    background: url(./images/bg.png);
-    background-size: cover;
-    background-position: center;
+    background-image: linear-gradient(45deg, #ff7e5f, #feb47b, #ffdc88, #9df3c4);
+
+    font-family: "Mukta", sans-serif;
+
 }
 
 .app{
-    height: 60%;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
 }
 
+.text{
+    text-align: center;
+    margin-top: 40px;
+    gap: 5px;
+}
+
 .card{
-    background-color: beige;
-    width: 60%;
+    background-color: #FFD166;
+    width: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    border-radius: 25px;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
     padding: 2%;
     box-shadow: 10px;
     margin: auto;
-    height: 200px;
-    margin-top: 50px;
+    height: 180px;
+    margin-top: 200px;
+    text-align: center;
 }
 
 .heading{
@@ -43,17 +53,17 @@
     position: relative;
     outline: none;
     text-decoration: none;
-    border-radius: 50px;
+    border-radius: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
     text-transform: uppercase;
-    height: 200px;
-    width: 210px;
+    height: 300px;
+    width: 200px;
     opacity: 1;
-    background-color: #ffffff;
-    border: 1px solid rgba(22, 76, 167, 0.6);
+    background-color: beige;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
   }
     
   .button span {
@@ -73,6 +83,7 @@
   }
 
   .footer {
+    font-family: "Mukta", sans-serif;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -82,13 +93,16 @@
   }
   
   .footer a {
-    font-size: 14px;
+    font-family: "Mukta", sans-serif;
+    font-size: 18px;
     font-weight: bold;
     text-decoration: none;
   }
   
   .footer span {
-    font-size: 14px;
+    font-size: 18px;
+    font-family: "Mukta", sans-serif;
+
   }
     
     
